# kepler

./: Cargo.toml
crates/kepler/: Cargo.toml
crates/kepler/src/: body.rs  lib.rs  plane.rs  utils.rs
crates/kepler/src/base_units/: angular.rs  base.rs  chrono.rs  linear.rs  mod.rs
crates/kepler/src/bundles/: body.rs  eliptical.rs  mod.rs  transform.rs
crates/kepler/src/keplerian_elements/: elliptical_orbit.rs  mod.rs
crates/kepler/src/orbits/: elliptical.rs  mod.rs  orbit.rs
crates/kepler/src/shapes/: ellipse.rs  mod.rs
game_plugin/: Cargo.toml
game_plugin/src/: camera_plugin.rs  lib.rs  orbit.rs  orbit_plugin.rs  player.rs  player_camera_plugin.rs  utils.rs
game_plugin/src/orbit/: bundles.rs  components.rs  orbit.rs  orbit_body_thing.rs  orbit_parameters.rs  orbit_visualizer.rs  world_generator.rs  world_updater.rs
game_plugin/src/orbit/orbit_visualizer/: debug.rs  orbit_lines.rs
game_plugin/src/orbit/world_generator/: ellipse_create.rs  generate_world.rs  spawn_world.rs
game_plugin/src/orbit/world_updater/: debug_ellipse.rs  move_bodies.rs  orbit_driver.rs  rotate_bodies.rs  update_orbits.rs
game_plugin/src/orbit_plugin/: orbit.rs  reference_frame.rs
game_plugin/src/player/: camera_controller.rs  input.rs  orbit_picker.rs
game_plugin/src/player/camera_controller/: setup_camera.rs  update_camera.rs
game_plugin/src/player/orbit_picker/: select_orbits.rs
src/: main.rs
