[package]
name = "space_pilot"
version = "0.1.0"
authors = ["Andreas Weibye <13300393+Weibye@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
game_plugin = { path = "game_plugin" }