[package]
name = "game_plugin"
version = "0.1.0"
publish = false
authors = ["Andreas Weibye <13300393+Weibye@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5.0", default-features = false }
bevy_prototype_debug_lines = "0.3.1"
# bevy_flycam = "0.5.1"
bevy_mod_picking = "0.4"
rand = "0.8.3"
smooth-bevy-cameras = { git = "https://github.com/bonsairobo/smooth-bevy-cameras", branch = "main" }